[package]
name = "wand"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
console = "0.14.1"
dialoguer = "0.8.0"
env_logger = "0.8.4"
log = "0.4.14"
prettytable-rs = "0.8.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tera = "1.11.0"
